# SynCoTrain

./: .gitignore  LICENSE  README.md  config.ini  pyproject.toml  requirements.txt  sync.yml  sync_reqs.txt  tmp_config1.json
data/input/: small_synthDF
data/input/new/: small_synthDF
data/results/tmp/: config.json
data/results/tmp/small_synthDF/classifier_1/0/: config.json  history_train.json  history_val.json  ids_train_val_test.json  test_data_data_range
data/results/tmp/small_synthDF/classifier_1/1/: config.json  history_train.json  history_val.json
data/results/tmp/small_synthDF/classifier_1/2/: config.json  history_train.json  history_val.json
lib/: classifier.py  coTraining.py  puLearning.py
lib/alignn/: alignn.py  classifier_alignn.py
src/: configuration.py  main.py
src/main/config/: config.ini
src/main/python/: alignn.py  classifier.py  coTraining.py  configuration.py  main.py  puLearning.py
syncotrain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
syncotrain/lib/: classifier.py  coTraining.py  puLearning.py
syncotrain/lib/alignn/: classifier_alignn.py
syncotrain/lib/crabnet/: classifier_crabnet.py
syncotrain/lib/forest/: classifier_forest.py
syncotrain/src/: configuration.py  main.py
